tests/snapshots/serde__display_map_one_element.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[\"a\", 1]])"
---
new Map([
  ["a", 1],
])
