tests/snapshots/serde__display_map_two_elements.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Map([[\"a\", 1], [\"b\", 2]])"
---
new Map([
  ["a", 1],
  ["b", 2],
])
