tests/snapshots/serde__display_number_primitive_infinity.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(Infinity)"
---
new Number(Infinity)
