tests/snapshots/serde__display_number_primitive_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(1.7976931348623157e+308)"
---
new Number(179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000)
