tests/snapshots/serde__display_number_primitive_min.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Number(5e-324)"
---
new Number(0.000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005)
