tests/snapshots/serde__display_object_nested.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{\"a\": {\"b\": true}}"
---
({
  "a": {
    "b": true,
  },
})
