tests/snapshots/serde__display_object_two_byte_property_key.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{\"foo🗄️\": 6}"
---
({
  "foo🗄️": 6,
})
