tests/snapshots/serde__display_object_two_properties.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n{\"a\": 1, \"b\": 2}"
---
({
  "a": 1,
  "b": 2,
})
