tests/snapshots/serde__display_regexp_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew RegExp(\"(?:)\")"
---
new RegExp("(?:)")
