tests/snapshots/serde__display_resizable_arraybuffer_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew ArrayBuffer(2, { maxByteLength: 10 })"
---
const v0 = new ArrayBuffer(2, { maxByteLength: 10 });
v0
