tests/snapshots/serde__display_set_circular_multi.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst a = { s: new Set() }; a.s.add(a); a"
---
const v0 = new Set([
]);
const v1 = {
  "s": v0,
};
v0.add(v1);
v1
